Bug 13306 - option to skip probes with alias prologue problems
Summary: option to skip probes with alias prologue problems
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-17 11:16 UTC by Frank Ch. Eigler
Modified: 2011-12-01 00:59 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2011-10-17 11:16:11 UTC
Tapset aliases may speculatively manipulate $variables or @cast expressions
that may be expected to fail sometimes.  In some cases, the tapset author
may remember to wrap these e.g. in try / catch blocks.  As an enhancement
to the existing --skip-badvars option that's narrowly focused on $var
runtime errors, we could introduce an implicit try / catch over alias
prologues:

probe a = foo { ..handler prologue.. }
probe a { ..handler.. }

to expand to:

    try {
     ..handler prologue..
    } catch { next }
    ..handler..

It may make sense to credit such events against the MAXSKIPPED counter.
Comment 1 Frank Ch. Eigler 2011-12-01 00:59:24 UTC
commit 8bf9072 et prior