session.h
@@ -183,6 +183,7 @@ public:
   bool tmpdir_opt_set;
   bool dump_probe_types;
   int download_dbinfo;
+  bool suppress_handler_errors;
 
   // NB: It is very important for all of the above (and below) fields
   // to be cleared in the systemtap_session ctor (session.cxx).
